Added demo for password text field

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -250,63 +250,14 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/passwordLayout"
+        <com.andrew.tasky.presentation.views.PasswordTextField
+            android:id="@+id/passwordTextField"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/rounded_edit_text"
-            android:backgroundTint="@color/light_grey"
             app:layout_constraintTop_toBottomOf="@+id/topOfPassword"
             app:layout_constraintBottom_toTopOf="@+id/bottomOfPassword"
             app:layout_constraintStart_toEndOf="@id/startOfTextBoxes"
-            app:layout_constraintEnd_toStartOf="@+id/endOfTextBoxes">
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/startOfEditText3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".061" />
-
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/endOfEditText3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent=".878" />
-
-            <EditText
-                android:id="@+id/passwordEditText"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:background="@null"
-                android:hint="@string/password_preview"
-                android:password="true"
-                android:singleLine="true"
-                android:textAlignment="viewStart"
-                android:textColorHighlight="@color/black"
-                android:textCursorDrawable="@null"
-                app:layout_constraintStart_toEndOf="@id/startOfEditText3"
-                app:layout_constraintEnd_toStartOf="@id/endOfEditText3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-            </EditText>
-
-            <ImageButton
-                android:id="@+id/passwordVisibilityButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/ic_baseline_visibility_off_24"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/endOfEditText3"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent">
-
-            </ImageButton>
-
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintEnd_toStartOf="@+id/endOfTextBoxes" />
 
         <Button
             android:id="@+id/getStartedButton"
