--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,11 +11,24 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+        <!-- datePickerTheme -->
+        <item name="android:datePickerDialogTheme">@style/MyDateAndTimePickerDialogTheme</item>
+        <!-- timePickerTheme -->
+        <item name="android:timePickerDialogTheme">@style/MyDateAndTimePickerDialogTheme</item>
     </style>
 
     <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_image</item>
         <item name="android:statusBarColor">@color/tasky_green</item>
     </style>
+
+    <style name="MyDateAndTimePickerDialogTheme" parent="android:Theme.Material.Light.Dialog">
+        <item name="android:colorAccent">@color/black</item>
+        <item name="android:buttonBarButtonStyle">@style/DateAndTimePickerTheme.ButtonBarButtonStyle</item>
+    </style>
+
+    <style name="DateAndTimePickerTheme.ButtonBarButtonStyle" parent="Widget.MaterialComponents.Button.TextButton.Dialog">
+        <item name="android:textColor">@android:color/black</item>
+    </style>
+
 </resources>
