--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -78,6 +78,7 @@
     </TextView>
 
     <EditText
+        android:id="@+id/inputEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
@@ -85,7 +86,6 @@
         app:layout_constraintEnd_toStartOf="@id/endOfMargin"
         app:layout_constraintStart_toEndOf="@id/startOfMargin"
         app:layout_constraintTop_toBottomOf="@id/topOfEditLineGuideline"
-        tools:text="hello">
-    </EditText>
+        tools:text="hello"></EditText>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
