--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -29,28 +29,25 @@
         android:label="fragment_agenda"
         tools:layout="@layout/fragment_agenda" >
         <action
-            android:id="@+id/action_agendaFragment_to_taskDetailFragment"
-            app:destination="@id/taskDetailFragment" />
+            android:id="@+id/action_agendaFragment_to_agendaItemDetailFragment"
+            app:destination="@id/agendaItemDetailFragment" />
     </fragment>
     <fragment
-        android:id="@+id/taskDetailFragment"
-        android:name="com.andrew.tasky.presentation.task_detail.TaskDetailFragment"
-        android:label="fragment_task_detail"
-        tools:layout="@layout/fragment_task_detail" >
+        android:id="@+id/agendaItemDetailFragment"
+        android:name="com.andrew.tasky.presentation.agenda_item_detail.AgendaItemDetailFragment"
+        android:label="fragment_agenda_item_detail"
+        tools:layout="@layout/fragment_agenda_item_detail" >
         <action
-            android:id="@+id/action_taskDetailFragment_to_editFragment"
+            android:id="@+id/action_agendaItemDetailFragment_to_editFragment"
             app:destination="@id/editFragment" />
         <argument
-            android:name="taskType"
-            app:argType="integer" />
+            android:name="agendaItemType"
+            app:argType="string" />
     </fragment>
     <fragment
         android:id="@+id/editFragment"
         android:name="com.andrew.tasky.presentation.edit.EditFragment"
         android:label="fragment_edit"
         tools:layout="@layout/fragment_edit">
-        <argument
-            android:name="editType"
-            app:argType="integer" />
     </fragment>
 </navigation>
