--- a/app/src/main/res/layout/fragment_agenda_item_detail.xml
+++ b/app/src/main/res/layout/fragment_agenda_item_detail.xml
@@ -178,7 +178,7 @@
 
         <TextView
             android:id="@+id/taskTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:text="Project X"
@@ -186,6 +186,7 @@
             android:textSize="30sp"
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/bottomOfTitleLine"
+            app:layout_constraintEnd_toStartOf="@+id/editTitleButton"
             app:layout_constraintStart_toEndOf="@id/taskDoneCircle"
             app:layout_constraintTop_toBottomOf="@+id/topOfTitleLine"
             tools:text="Project X">
@@ -193,8 +194,8 @@
 
         <ImageButton
             android:id="@+id/editTitleButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:background="@drawable/ic_baseline_arrow_forward_ios_24"
             android:backgroundTint="@color/black"
             app:layout_constraintBottom_toTopOf="@id/bottomOfTitleLine"
@@ -231,8 +232,8 @@
 
         <ImageButton
             android:id="@+id/editDescriptionButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:background="@drawable/ic_baseline_arrow_forward_ios_24"
             android:backgroundTint="@color/black"
             app:layout_constraintBottom_toBottomOf="@id/descriptionTextView"
@@ -278,20 +279,43 @@
             app:layout_constraintTop_toBottomOf="@id/topOfTimeLine"
             tools:text="08:00"></TextView>
 
+        <ImageButton
+            android:id="@+id/timeButton"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
+            android:backgroundTint="@color/black"
+            android:layout_marginStart="25dp"
+            app:layout_constraintBottom_toBottomOf="@id/time"
+            app:layout_constraintStart_toEndOf="@id/time"
+            app:layout_constraintTop_toTopOf="@id/time">
+        </ImageButton>
+
         <TextView
             android:id="@+id/date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="20dp"
             android:layout_marginTop="24dp"
             android:text="Jul 21 2022"
             android:textColor="@color/black"
             android:textFontWeight="600"
-            app:layout_constraintEnd_toStartOf="@+id/endOfMarginTaskLayout"
-            app:layout_constraintStart_toEndOf="@id/time"
+            app:layout_constraintEnd_toStartOf="@+id/dateButton"
+            app:layout_constraintStart_toEndOf="@id/timeButton"
             app:layout_constraintTop_toBottomOf="@id/topOfTimeLine"
             tools:text="Jul 21 2022">
         </TextView>
+
+        <ImageButton
+            android:id="@+id/dateButton"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/ic_baseline_arrow_forward_ios_24"
+            android:backgroundTint="@color/black"
+            app:layout_constraintBottom_toBottomOf="@id/date"
+            app:layout_constraintEnd_toStartOf="@id/endOfMarginTaskLayout"
+            app:layout_constraintTop_toTopOf="@id/date">
+        </ImageButton>
 
         <View
             android:id="@+id/bottomOfTimeLine"
@@ -334,8 +358,8 @@
 
         <ImageButton
             android:id="@+id/reminderButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:background="@drawable/ic_baseline_arrow_forward_ios_24"
             android:backgroundTint="@color/black"
             app:layout_constraintBottom_toBottomOf="@id/reminderTextView"
@@ -358,7 +382,7 @@
             android:id="@+id/topOfDeleteTaskButton"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:layout_marginBottom="24dp"
+            android:layout_marginBottom="10dp"
             android:background="@color/baby_blue"
             app:layout_constraintBottom_toTopOf="@id/deleteTaskButton"
             app:layout_constraintEnd_toStartOf="@id/endOfMarginTaskLayout"
@@ -366,15 +390,16 @@
 
         <TextView
             android:id="@+id/deleteTaskButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="24dp"
+            android:layout_width="125dp"
+            android:layout_height="30dp"
             android:text="@string/delete_task_button"
             android:textColor="@color/lightish_grey"
+            android:gravity="center"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/endOfMarginTaskLayout"
-            app:layout_constraintStart_toEndOf="@id/startOfMarginTaskLayout">
+            app:layout_constraintStart_toEndOf="@id/startOfMarginTaskLayout"
+            app:layout_constraintTop_toTopOf="@id/topOfDeleteTaskButton">
         </TextView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
