--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -4,52 +4,167 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".presentation.agenda.AgendaFragment">
+    tools:context=".presentation.agenda.AgendaFragment"
+    android:background="@color/black">
 
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Hello" />
-
-    <Button
-        android:id="@+id/add_task"
+        android:id="@+id/calendarMonth"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="ADD TASK"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_height="50dp"
+        android:text="MARCH"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:layout_marginStart="30dp"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:clickable="true"
+        android:focusable="true"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/add_event">
-    </Button>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/mainBodyLayout">
+    </TextView>
+    <ImageView
+        android:id="@+id/calendarDropDownArrow"
+        android:src="@drawable/arrow_drop_down"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        app:layout_constraintTop_toTopOf="@id/calendarMonth"
+        app:layout_constraintBottom_toBottomOf="@id/calendarMonth"
+        app:layout_constraintStart_toEndOf="@id/calendarMonth">
+    </ImageView>
 
-    <Button
-        android:id="@+id/add_event"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/logoutButtonLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ADD EVENT"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_task"
-        app:layout_constraintBottom_toTopOf="@id/add_reminder">
-    </Button>
-
-    <Button
-        android:id="@+id/add_reminder"
+        app:layout_constraintBottom_toTopOf="@id/mainBodyLayout">
+    <ImageView
+        android:id="@+id/logoutButton"
+        android:background="@drawable/logout_circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ADD REMINDER"
+        android:clickable="true"
+        android:focusable="true"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_event"
-        app:layout_constraintBottom_toTopOf="@id/agenda_item_recycler_view">
-    </Button>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+    </ImageView>
+        <TextView
+            android:id="@+id/logoutButtonText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#b7c7de"
+            android:text="AH"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+        </TextView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/bottomOfHeader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.09" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/mainBodyLayout"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="65dp"
+        android:background="@drawable/rounded_top"
+        android:backgroundTint="@color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:id="@+id/miniCalendar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="16dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/currentDateTextView">
+
+            <com.andrew.tasky.presentation.views.MiniCalendarItem
+                android:id="@+id/today"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+            </com.andrew.tasky.presentation.views.MiniCalendarItem>
+            <com.andrew.tasky.presentation.views.MiniCalendarItem
+                android:id="@+id/tomorrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp">
+            </com.andrew.tasky.presentation.views.MiniCalendarItem>
+            <com.andrew.tasky.presentation.views.MiniCalendarItem
+                android:id="@+id/thirdDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp">
+            </com.andrew.tasky.presentation.views.MiniCalendarItem>
+            <com.andrew.tasky.presentation.views.MiniCalendarItem
+                android:id="@+id/fourthDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp">
+            </com.andrew.tasky.presentation.views.MiniCalendarItem>
+            <com.andrew.tasky.presentation.views.MiniCalendarItem
+                android:id="@+id/fifthDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp">
+            </com.andrew.tasky.presentation.views.MiniCalendarItem>
+            <com.andrew.tasky.presentation.views.MiniCalendarItem
+                android:id="@+id/sixthDay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp">
+            </com.andrew.tasky.presentation.views.MiniCalendarItem>
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/currentDateTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Today"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:layout_marginStart="30dp"
+            app:layout_constraintTop_toBottomOf="@id/miniCalendar"
+            app:layout_constraintBottom_toTopOf="@id/agendaItemRecyclerView"
+            app:layout_constraintStart_toStartOf="parent">
+        </TextView>
 
     <androidx.recyclerview.widget.RecyclerView
-        app:layout_constraintTop_toBottomOf="@id/add_reminder"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:id="@+id/agenda_item_recycler_view"
+        android:id="@+id/agendaItemRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="16dp">
+        android:padding="16dp"
+        app:layout_constraintTop_toBottomOf="@id/currentDateTextView"
+        app:layout_constraintBottom_toBottomOf="parent">
     </androidx.recyclerview.widget.RecyclerView>
+
+    <ImageButton
+        android:id="@+id/addAgendaItemFAB"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/floating_action_button_new_agenda_item"
+        android:layout_marginBottom="50dp"
+        android:layout_marginEnd="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+    </ImageButton>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
