--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,5 +17,7 @@
     <color name="event_yellow">#cced42</color>
     <color name="reminder_grey">#f2f3f7</color>
 
+    <color name="current_date">#fdeda7</color>
+
 
 </resources>
