--- a/app/src/main/res/layout/fragment_agenda_item_detail.xml
+++ b/app/src/main/res/layout/fragment_agenda_item_detail.xml
@@ -66,7 +66,7 @@
     </TextView>
 
     <TextView
-        android:id="@+id/currentDateTextView"
+        android:id="@+id/current_date_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
