-Cleans up code -Adds AgendaItems.kt object and puts agendaItemList and sorting inside -Makes DeleteConfirmationDialogFragment its own class -Adds FragmentExt to its own file

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,7 +17,5 @@
     <color name="event_yellow">#cced42</color>
     <color name="reminder_grey">#f2f3f7</color>
 
-    <color name="current_date">#fdeda7</color>
-
-
+    <color name="highlighted_mini_calendar">#fdeda7</color>
 </resources>
