-Cleans up code -Sends data from AgendaItemAdapter.kt to AgendaFragment.kt and then to AgendaItemDetailFragment.kt

--- a/app/src/main/res/navigation/my_nav.xml
+++ b/app/src/main/res/navigation/my_nav.xml
@@ -46,8 +46,18 @@
             android:id="@+id/action_agendaItemDetailFragment_to_editFragment"
             app:destination="@id/editFragment" />
         <argument
+            android:name="agendaItem"
+            app:argType="com.andrew.tasky.domain.AgendaItem"
+            app:nullable="true"
+            />
+        <argument
             android:name="agendaItemType"
-            app:argType="string" />
+            app:argType="com.andrew.tasky.util.AgendaItemType"
+            />
+        <argument
+            android:name="isInEditMode"
+            app:argType="boolean"
+            />
     </fragment>
     <fragment
         android:id="@+id/editFragment"
