-Cleans up code -Allows user to delete, add, and replace agenda items -Changes colors to be the same as Figma -Changes AgendaItemDetailFragment xml to be same as Figma -Adds fonts from Figma -Adds some icons from Figma -Adds photo screen (still needs updating to look like figma) -Adds event exclusive options to agendaItemDetailScreen

--- a/app/src/main/res/layout/fragment_edit.xml
+++ b/app/src/main/res/layout/fragment_edit.xml
@@ -32,7 +32,7 @@
         android:layout_width="0dp"
         android:layout_height="1dp"
         android:layout_marginTop="24dp"
-        android:background="@color/baby_blue"
+        android:background="@color/light_blue"
         app:layout_constraintEnd_toStartOf="@id/endOfMargin"
         app:layout_constraintStart_toEndOf="@id/startOfMargin"
         app:layout_constraintTop_toTopOf="@id/topOfEditLineGuideline"
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/save_button"
-        android:textColor="@color/tasky_green"
+        android:textColor="@color/green"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@id/topOfEditLineGuideline"
