--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -44,7 +44,7 @@
         android:id="@+id/buttonHolderLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/rounded_top"
+        android:background="@drawable/bg_rounded_top"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -132,8 +132,8 @@
             android:id="@+id/nameLayout"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@drawable/rounded_edit_text"
-            android:backgroundTint="@color/light_grey"
+            android:background="@drawable/bg_rounded_edit_text"
+            android:backgroundTint="@color/gray"
             app:layout_constraintTop_toBottomOf="@+id/topOfTextBoxes"
             app:layout_constraintBottom_toTopOf="@id/bottomOfName"
             app:layout_constraintStart_toEndOf="@id/startOfTextBoxes"
@@ -219,7 +219,7 @@
             android:id="@+id/backButton"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:background="@drawable/rounded_edit_text"
+            android:background="@drawable/bg_rounded_edit_text"
             app:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
             app:layout_constraintStart_toEndOf="@id/startOfTextBoxes"
             app:layout_constraintTop_toTopOf="@id/topOfBackButton">
