--- a/app/src/main/res/layout/text_field_password.xml
+++ b/app/src/main/res/layout/text_field_password.xml
@@ -8,8 +8,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:passwordToggleEnabled="true"
-    android:background="@drawable/rounded_edit_text"
-    android:backgroundTint="@color/light_grey"
+    android:background="@drawable/bg_rounded_edit_text"
+    android:backgroundTint="@color/light_2"
     app:hintEnabled="false"
     app:boxStrokeWidth="0dp"
     app:boxStrokeWidthFocused="0dp">
@@ -18,7 +18,7 @@
         android:id="@+id/passwordEditText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/rounded_edit_text"
+        android:background="@drawable/bg_rounded_edit_text"
         android:hint="@string/password_preview"
         android:inputType="textPassword"
         android:textCursorDrawable="@null"
