--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,7 +19,7 @@
 
     <style name="splashScreenTheme" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:windowBackground">@drawable/splash_image</item>
-        <item name="android:statusBarColor">@color/tasky_green</item>
+        <item name="android:statusBarColor">@color/green</item>
     </style>
 
     <style name="MyDateAndTimePickerDialogTheme" parent="android:Theme.Material.Light.Dialog">
