--- a/app/src/main/res/drawable/splash_image.xml
+++ b/app/src/main/res/drawable/splash_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:drawable="@color/tasky_green" />
+    <item android:drawable="@color/green" />
 
     <item android:drawable="@drawable/ic_launcher_foreground" android:gravity="center"></item>
 
