--- a/app/src/main/res/layout/dialog_delete_confirmation.xml
+++ b/app/src/main/res/layout/dialog_delete_confirmation.xml
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:paddingStart="20dp"
             android:paddingTop="20dp"
-            android:text="Delete"
+            android:text="@string/delete"
             android:textColor="@color/black"
             android:textSize="30sp"
             android:textStyle="bold"
@@ -28,7 +28,7 @@
             android:layout_width="0dp"
             android:layout_height="1dp"
             android:layout_marginTop="24dp"
-            android:background="@color/light_grey"
+            android:background="@color/light_2"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/deleteTextView" />
         <TextView
@@ -46,7 +46,7 @@
             android:id="@+id/topOfButtonsLine"
             android:layout_width="0dp"
             android:layout_height="1dp"
-            android:background="@color/light_grey"
+            android:background="@color/light_2"
             android:layout_marginTop="24dp"
             app:layout_constraintTop_toBottomOf="@id/confirmationTextView"
             app:layout_constraintStart_toStartOf="parent"/>
@@ -56,7 +56,7 @@
             android:layout_height="wrap_content"
             android:text="Cancel"
             android:textColor="@color/black"
-            android:backgroundTint="@color/light_grey"
+            android:backgroundTint="@color/light_2"
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toStartOf="@id/deleteButton"
@@ -67,7 +67,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Delete"
-            android:backgroundTint="#FF0000"
+            android:backgroundTint="@color/red"
             android:layout_marginBottom="5dp"
             android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
