--- a/app/src/main/res/layout/fragment_agenda.xml
+++ b/app/src/main/res/layout/fragment_agenda.xml
@@ -76,7 +76,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="65dp"
-        android:background="@drawable/rounded_top"
+        android:background="@drawable/bg_rounded_top"
         android:backgroundTint="@color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
