--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -44,7 +44,7 @@
         android:id="@+id/buttonHolderLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@drawable/rounded_top"
+        android:background="@drawable/bg_rounded_top"
         android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
