--- a/app/src/main/res/layout/item_agenda.xml
+++ b/app/src/main/res/layout/item_agenda.xml
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Amet minim non deserunt"
-            android:textColor="@color/grey"
+            android:textColor="@color/dark_gray"
             android:paddingStart="10dp"
             android:paddingTop="8dp"
             app:layout_constraintTop_toBottomOf="@id/agenda_item_title"
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Mar 5, 10:30 - Mar 5, 11:00"
-            android:textColor="@color/grey"
+            android:textColor="@color/dark_gray"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent">
         </TextView>
