--- a/app/src/main/res/layout/item_mini_calendar_day.xml
+++ b/app/src/main/res/layout/item_mini_calendar_day.xml
@@ -27,7 +27,7 @@
         android:text="S"
         android:textSize="16sp"
         android:textStyle="bold"
-        android:textColor="@color/grey"
+        android:textColor="@color/dark_gray"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -40,7 +40,7 @@
         android:text="10"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@color/grey"
+        android:textColor="@color/dark_gray"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
