--- a/app/src/main/res/layout/fragment_photo_detail.xml
+++ b/app/src/main/res/layout/fragment_photo_detail.xml
@@ -10,33 +10,34 @@
         android:id="@+id/closeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/ic_baseline_close_24"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-    </ImageButton>
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="17dp"
+        android:background="@drawable/ic_close_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></ImageButton>
 
     <TextView
         android:id="@+id/photoTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Photo"
-        android:textSize="24sp"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/inter_semi_bold"
+        android:text="@string/photo"
         android:textColor="@color/white"
-        android:layout_marginTop="16dp"
-        app:layout_constraintStart_toEndOf="@id/closeButton"
-        app:layout_constraintEnd_toStartOf="@id/deleteButton"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/closeButton">
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="@id/closeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
     </TextView>
 
     <ImageButton
         android:id="@+id/deleteButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="@drawable/ic_photo_trash"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="@id/closeButton"
         app:layout_constraintEnd_toEndOf="parent">
@@ -46,10 +47,15 @@
         android:id="@+id/photoImageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/closeButton"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="80dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
     </ImageView>
 </androidx.constraintlayout.widget.ConstraintLayout>
